--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <div class="social-section">
         <div class="social-inner">
           <div class="icons">
-            <img src="google.png" alt="Google">
-            <img src="facebook.png" alt="Facebook">
-            <img src="apple-logo.png" alt="Apple">
-            <img src="paypal.png" alt="PayPal">
+            <img src="Images/google.png" alt="Google">
+            <img src="Images/facebook.png" alt="Facebook">
+            <img src="Images/apple-logo.png" alt="Apple">
+            <img src="Images/paypal.png" alt="PayPal">
           </div>
           <p>Login with Social Accounts</p>
         </div>
@@ -112,16 +112,15 @@
 
       <div class="social-section">
         <div class="social-inner">
-            <div class="icons">
-                <img src="https://cdn-icons-png.flaticon.com/512/281/281764.png" alt="Google">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
-                <img src="https://cdn-icons-png.flaticon.com/512/179/179309.png" alt="Apple">
-                <img src="https://cdn-icons-png.flaticon.com/512/825/825454.png" alt="PayPal">
-            </div>
-        <p>Login with Social Accounts</p>
-    </div>
-</div>
-
+          <div class="icons">
+            <img src="Images/google.png" alt="Google">
+            <img src="Images/facebook.png" alt="Facebook">
+            <img src="Images/apple-logo.png" alt="Apple">
+            <img src="Images/paypal.png" alt="PayPal">
+          </div>
+          <p>Login with Social Accounts</p>
+        </div>
+      </div>
     </form>
   </div>
 
